@@ -2,6 +2,13 @@ ChangeLog
 
 Name: William Lai
 Date: 10-20-2013
+Description: Yet another bug fix, added end-of-game message
+    * src/chess/ComputerPlayer.java: Fixed AI freezing from checkmate in one moves.
+    * src/chess/StandardChessGame.java: Now prints message when game ends.
+    * src/chess/StandardChessGameGraphics.java: Added function to print game-ending message.
+
+Name: William Lai
+Date: 10-20-2013
 Description: Another bug fix, improved pseudo-FEN parser
     * src/chess/StandardChessGame.java: Fixed inability of AI to decide how to promote pawn. Also improved pseudo-FEN parser to allow for deciding whose move it is and whether castling is available or not.
     * src/chess/ComputerPlayer.java: Improved AI so that it now wants to promote pawns.
